--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,47 +4,47 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Ut3IBt/WidD+j8/m84De4sY7EcMrZzh38NFNfBe4u6AtXbYw7AE3HoZBW50Q0ORX9azWblZWZbdoGoMcfGl5ElM=,iv:bzzqBA7/0XxSt6OkcajaMuSWcDGIlwJFdT49GgvAm5c=,tag:0HY6Zbs9oGtZOFFbbVdgJQ==,type:comment]
-    #ENC[AES256_GCM,data:N2bRA8jH00LiTr2cRbgEsIeNKtPY23Ek3NT0VCycJnRGsWJ1tIPO+gHjNCw=,iv:ULJm1GfR829O7IGH44ifBTRMgHoBn0CJFYdev+pT/3o=,tag:OFZ2Fi9PSFKdmkssmoqm5Q==,type:comment]
-    VIP: ENC[AES256_GCM,data:RnbXJG84MKFJAc11vw==,iv:H9gMLDXszZkcBSuL6VdKSTUPqdVvfL2PkybM5XGz6Fs=,tag:kQ9ggCiS84O0bw9gNVNUEw==,type:str]
-    #ENC[AES256_GCM,data:QTgOwFptAhfiga1T437ES8UzzHqMiZtfyWhL,iv:B25SHCQaUi6lcUKfM9XudxFruVu98876dOqnlduSAFM=,tag:3dQhvTdAP1L7e/XRQaBv2w==,type:comment]
-    #ENC[AES256_GCM,data:CpnhReFcBoJnkcWvoputzWm+BIt44Vdt3EHvjRXQ/DkSIOms1cPoTl/oY2eeIEZSdyChjtFKi5s4jSkmqIUcssYLOoLVDOFPSMxu65gTaNDSjK9K5d4CRVA=,iv:USODWW/tpleh0OqPfrqtUus/rMIQPpKji/gLAM7G2os=,tag:J1Qz3/6N27DKqRwE6jq5oQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:0/6Ao2FKpccgkTGa36A=,iv:P2gQgs/QG77Sy6kdyYRrSDqosG0q9zJT22ru0nyDIQo=,tag:UcNJktPWMJW3KfBzXk3P2g==,type:str]
-    #ENC[AES256_GCM,data:9MJ7mXZfJNJYEStyt0qXLxEygw3r2QJp3PmCua92t5Kdpg==,iv:lTAh/AbtYIHnpw4b9g/yqTedf//1PBeMk+k/hSmwLns=,tag:WUbh+FdbF6nHpocmLUrXJQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:YgIh+e4LJWiXFVt15w==,iv:GI+zj031OtaeOkrOaeg8+DOchUdC4DDzDS5bhz6gOZg=,tag:0EORANgsXRqbbSMnWLPWdQ==,type:str]
-    #ENC[AES256_GCM,data:eWjqzjsmYNYURhuIHy+WT530p8ypAv5KMoU52U/Pa/nWFrIHhGlSh4V/zuGxP+0=,iv:n0Z0BtbEA57PQn1kwPpJM9Ow8eFL4r2vq4PT5IFOTz8=,tag:m5cbo5X2xPK+8Hj9mGa8Pg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:y2qnRKSEja6g3xz0kPMtRH0568LY1fp392pQ1RTgiA==,iv:KvvWXZ0VWQAp1UMrPwjmXyCW0Y3uStXZje0h/vAvQxo=,tag:HBt2+MHbb5FVZtqcOxHKRg==,type:str]
-    #ENC[AES256_GCM,data:BBwQ/oeIsstTMI2iFvgI+X+a9ZaKkSMW4IM3MMob9G4RXvKkgEa0y91PzXgi+7N6FEe8O0kDsnpwcEjNCzaJPS4ltGPqQ7cjplGG/I+vU6EqTQ==,iv:tAPVBqDJuY5Ierw0Tt3ZIRioVDGQ+FWpdVvdnbd9Mvc=,tag:9Blzsby1i+hj04jSG8qxKw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:ryllbK1wW58gEtpjSMYC,iv:ihIh3AI+yWVTizBoiAM6qHe+tbJwfuwuYjcsdljaiJ0=,tag:iwg0tfRA+Aqii19/OjkSOQ==,type:str]
-    #ENC[AES256_GCM,data:nnNAFy8AWZZ4Z6Ueh2iVtCnFxRt/WOPuBeYejHtWgjsG,iv:CpQvZdXZGXmKGORbnwCLSX+UGv852DyzN4Kp1jQGhpk=,tag:8QruvhJjryCpRqtuwFShjA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:OnN0lT/xABdXe7XaydO8,iv:jmll+1iIrbbJF8gsbwUzNH8znparJDkYeAZl7z1AFWA=,tag:VJG2WtiRoZJ8igEezC+Ing==,type:str]
-    #ENC[AES256_GCM,data:003EbQVUhjfLVWpJilT7uVtsWGYYbVkq2DwyYVSqvm0bRUeV5APBKTUlaa8QDIyukbREWtNwmgb76fXhfx+8gTYNwzaXm36exZAOSQPKwLQ=,iv:9lqA4/yqXAkknCeQxH0KF1E4zyQgH2Tndb7pkEmwb4k=,tag:7ZqEJyOmQ9x9XT7G8igoYQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:o2SjFITSwYpNRnG4N94f,iv:xn5rkxAyy9pmi7sH920laoEIqEA2UoNvG44YeSF/dPU=,tag:DTUTX7wNvb4A0S5oqaix3g==,type:str]
-    #ENC[AES256_GCM,data:aHPFJeIseXQKFQiw9tq2YHZk4I4Qr0fS26yujKTFYIq7oXV7hSu8E5iwvp7p7/+Heqhc2jK1ZrvCo9TMgRxLnXXEmMM4a2h3eoyB0JHC5GIpWtIr80Mh,iv:wrhTJoHRL1pzS3ChZTrggXoUdjcvBnlsoqV3aKenXzI=,tag:9v4RCTpu+97OBiqzO6N6vw==,type:comment]
-    #ENC[AES256_GCM,data:dE4s6din3tJCg9bwT9k8AIF1S3Lv7SdQa9EGr0HaNrNHJIh9Cq/gLN8+YAXZxOEWyUXVNwvtbf64cb0KFE/msBBY18jCSRFxl+gRR8B2zQpHNGO0zd8B3djWmFvvoi8P0Hti1qGUSj20KbPG7FZmjLMQTdHjbf5r7HYgKQ==,iv:Qw+lXYXhWzB7VxN9cfEaLnSpvrps9MyieAXyF3U+gYo=,tag:MBrkPKGiqtFqFG5tGZ0xmg==,type:comment]
-    #ENC[AES256_GCM,data:nX1F9ggwRA3mKcJKXs1fBWaoPA6lYtWsTtZTO/I8MjvluZEYMS61Y06BsuD061elJhwsn/Ud1ayCqaCoM4vAZinxpCP8FNC/sHYnf1Xthrk=,iv:N//iuBsyg9Vo0OgNC3+6ya6M1FhatOqWeeN2X2hB6Ow=,tag:h0eKtf53mAums/Cf9huUug==,type:comment]
-    #ENC[AES256_GCM,data:fv3s/g/qMcAlW9Zzg0NCu+bp2MEmvfRfNI/mUVQkFMsF4c11MyaLe9vY4ZKnwuIrd1ZAlZXY,iv:k8y8XIqDd5P86FBod9LEqwhJAw8j6OEeWcqFNz5zEKw=,tag:JgCuZ0QOaT6hppUBB9NDDw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:UHe5Q/ZnvuKb3nUQ,iv:Es9vc4aNqPI+nGf5yJFAvkpx6w7MNtA6Y4HvjLzpH84=,tag:Ww4Wm1sQFHvA3R5lg98gnA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mjuKHM40LoPUeLVI94z/nA8=,iv:QdpgYJWoZPA/5sFofLzeHVd9ynQr2wQcJimBg9WTQms=,tag:TwRVq/vqMAul9B4Uh+72VA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:ENO5tQLwXTb38sxzhARvtvZcNiBLxdz1udd3LSxeiGE=,iv:uhB5eGo5todmEdtMI6VfkgmvONcJJOGV+TpQYYoHXr8=,tag:ySWt48dMlHmz7KxphApCNA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:7/E60T4FUZI0EwyYnwrc53G56HSl3LmKR/0Xq7q3U4fhAqKLYvXnsw==,iv:KMHfAih7wvE6TBc1bDbVbgF09CSCEspFg/PCTZiCOAg=,tag:Tlp3Ic4QYtzMITOSnveMjg==,type:str]
-    #ENC[AES256_GCM,data:3OG8dSFoGvZANMIdEip42lb+Yf1/BsS3LhP88IesZgbQ6u8/27n1VQyYCR4w4juxBdHZ3+IRsXrJkm1saXwrRQ==,iv:ps/0o9EmyosxRK/JwcC8NKIdm2Qq7WkDCnqWAhkwcVo=,tag:LI2FiFxpKSCfLPzwdxQrGw==,type:comment]
-    #ENC[AES256_GCM,data:yN+3ADURP6sSv2VxtM1PGeFF9BozbjKHnbWDEw8f4yv9CUM0jxIn/6poOsT1fFGLAZY0hc2/tLk=,iv:URegr0gZIl7jI5Gy7SLsLkWUCwiuHxz3mvXcN0BWxvs=,tag:6wSEZPxB9Ca7CS1MExONWQ==,type:comment]
-    #ENC[AES256_GCM,data:U9SltnWrBT77NYgknstrcntDuqCFpqieVw==,iv:NGIQQY2d/CvHQPwMARUKplGr5Ib3X53j2OAJnvy5cFE=,tag:DAMy2DZXtYm+Vb7hZB13xw==,type:comment]
-    #ENC[AES256_GCM,data:wDZ3uVblJ5oKTnrS38SEpmg/Y3AYFTkGIzdWmRsTr5LqKp0EfKL6eJ+64tTWdRGoqruJ/0SuuBH93P5oKCyc5gaR+/9sEwSpmFhX6YU=,iv:9uKDZ66VJoLGJSsfFJk88OdRh7Lfz5OoVdadewDuN60=,tag:4VkYu7BSr9SjTiyajLk0bw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:YpR7IlHii+HOsCeG3Swdgzw9nmQQBqosGHxo9INexxPCySANGLv6siVuLyiaj90/,iv:vg7hLPMiFmt5atGxByX1aq2HG7lHzbAzPsi97eUKXho=,tag:6a5HB42DqeFAax/W2WvNpA==,type:str]
-    #ENC[AES256_GCM,data:EAgmD8ADqJgpYUTFAf5j0HOB+jchD6OqVSy0UgpR/pa+fZ9eIjFyC4uhIKQZwgNEo5F4ForppA68wIhzgd6AwO8l3w7mm7g=,iv:zhtR1p5qAQhdgt92tviRdaRllzEBpYGZVdXVPcqjTF0=,tag:C9OHExuFmPFJyRqvqZh14w==,type:comment]
-    #ENC[AES256_GCM,data:RJ+ViVrjW7a5MeHAq8pAflKpIE2O5Cp05GrG3QD/vS/Ozs/SHdcd+iQeF0J1wTl5qExDdfbZ,iv:Z6o3g21rRjKeFFpWgrTnSdNf/BGJUfJ/uWteZGZtjCE=,tag:0qyVXa157qIpGziLT7FqOg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:iRdQou6b6g==,iv:1cLLJBlTX933Xcv+lLh01TrUSRmA51XEXLSHy4g+WLE=,tag:Sst4aEHa64L+bXjihjGxjQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:QapFfMcpeXfWuR3zbwIrek0AUjo=,iv:RIUwv6RLzNkPsKTUCODd/hw7Pxum3usVHdeOABiOwJM=,tag:BlrAdK0aTq0E1y0FvO6a6Q==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:0V6rFk1FZP6B8Hs=,iv:3sue7HSZZTkQCoidqRPUa8fXGhsnjE1u0dIAK9jJ44s=,tag:+T0Cc6FpnQsxzVatF4amjg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:fF+teFGoBd3SyGYao955,iv:22aGXZa1H+PbX+gM3tvUaXAw+HC8BUKRgJbFHk04PDg=,tag:Llsjma3Y4ER5pRBm8fIE6g==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:e/ZvbexojOEQWkGXSnOa7ZFMn1Lt/lmFVg==,iv:dZIw6kHBjwtKZpfoM8XGnEr2Qyr/htMN4AfH9qr5lvs=,tag:ZSWc+TsvbAtug+cti3bpRQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JmK5RFLYd67SJeIyQs/mKQG0G0ZXTAT0,iv:YbqXSfmHdXJFs++QOvFZ+7Ja+8g8s8afFa2omCgxDoc=,tag:OOLdK1DVqRezz3z1yR7ZDA==,type:str]
-    #ENC[AES256_GCM,data:k5329RzoBQao+DOC4O4=,iv:YVnWry283+vFU1wmenLPCJJGH3YCGoVsIKYOCxoBxbo=,tag:0vEx341oMvSFeOngzt+GPQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:1hlK20m9+x6iEwlYSQ==,iv:a44U/cBQyhOKKUXvvpdlnpSyh4ekNU0MWYDQjdxr47g=,tag:fC5k0Je/7Vlm40nX2TKEvQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:pKZeLJhtvGyiy0BEKw==,iv:oeZXm2HRuzXl+vcwbID7logHqvbFN1q6av7WmhsHCvo=,tag:+nVWH72ZuWlRJ4FxF60D4Q==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:++tpjw==,iv:R6HG09jhliV1/JAkp4Iuj/xZQc7lBW90J0A59N0a9Nk=,tag:Rkdd6PqONxym0txVBJ+cFQ==,type:str]
+    #ENC[AES256_GCM,data:1bueArO/kLiPD8iWx3Jb+JROwE+75B7M3QSklx20aTEysCW1MO9H7b/ba/Yr4ovLMrg9sfl2msMjBo5N0zRw1FM=,iv:+IItriuM7VdoF8jyWELxb6rOsx7FXBDI8IAjpvGBpWo=,tag:U3Gw+t1zcd8Jub/iniM7qA==,type:comment]
+    #ENC[AES256_GCM,data:xTGIIuVv1FhCDjViGtUqPime/tRZh9Nt2hpvk7ldfg1paS3OKjIj7A+vfEY=,iv:p5iDrzkhyfV7wQoiRoLCEvezEs71/+SgR3hFYD88t8g=,tag:Xy2xI/i6ckkZxj/hyZvK3w==,type:comment]
+    VIP: ENC[AES256_GCM,data:rZqZO79zNPdNtbRYnw==,iv:Cws66JzvDwxD/7wTCXehKUtCIm+RO9jITw69U0gTuYI=,tag:jQ/ehWh/lKc+SaKlPI9/6Q==,type:str]
+    #ENC[AES256_GCM,data:GYbID1HcDMNQuyewr3aqaO+Z5ZctPwQfmriR,iv:i75ET6kSnCnXwT6E5B5/yPEG08fyZU/P40p+irM30cs=,tag:Cs9n1bL4+ykIotl86eQ1LQ==,type:comment]
+    #ENC[AES256_GCM,data:B/YSVQVIJYbUUy1cu59Qo6FSe9WSdUbS6hnDjpi5H8mvxwRJQCaM/e1xMwKJwoiJCKv3LzCLbhcMm4aLXJZWKn6c3khBqHZUtc6/TuG08C00BGyIakaHIFc=,iv:tbhc92mwUdhACB5WH2XDHTK46/xWRGGPWkcFu9DQNRo=,tag:ZA+xhkVD3lYj2aqJ5PCnsQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:lNFD/1DJoBAdI25Rm44=,iv:Z5fpsdSrqGXq8S1FMt2/zRc09xHGGMj7heqX0nJsMoE=,tag:pLrzcXmp1i4kDtogLS1idA==,type:str]
+    #ENC[AES256_GCM,data:5snRSthxjmuC9THmeatH1Ij2el4B8ZUXZOX9BSi+1QynNA==,iv:J0nmYHCahGukyd/YMkcmUzP9QmUnfSLrlVPdrHZbHdA=,tag:udVhf4GBzXvr8X8h/tRuEw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:QkEuPcJ04Mq1p2chWA==,iv:Q9hct2yAZ9Rr81yL3P2UtHh0zyqzq8zQVALRvEBB32k=,tag:O9S8HcEqvNOeNELlR+eX6Q==,type:str]
+    #ENC[AES256_GCM,data:fMSX/MATA3OQYrLtS57UoWnDJoCQTtj3ICYyDBomZ3dLLBqqvTorbEcQAvVFrhk=,iv:3f7ACuhrPciGvj/V6yVK43LcdszF81+KV7bp7qm13EA=,tag:ZZ1XdVrlPah+sAYTEjJT9w==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:a7ThJUfb+YOqkDiZPgXYugev4nS2fyQcOt2SkYKl/Q==,iv:77D9EEvU4pBRmjKDEcsu0PENOEaNN6uPNJX58bY7Sqc=,tag:l08SRZfcbDgsZ4iJKBB1cg==,type:str]
+    #ENC[AES256_GCM,data:DBfkqwukObtcDtT2cMfNe79WfmcdWBLMgG6lqSudNZ1cnZBpMQtrNqSY7KAxtot7uE2mOnhDNip4dDeCk4vt94t7GhhjBOLKE0vzubEN4dlBqg==,iv:Esm2KXM3UQZRN+RRrX72Fn5I26EO6wu+SPRc+V4DSZ4=,tag:N4HEAvIQztDFZRmCd5Fj1w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:EKLpijiHH14h3cxTPNsB,iv:/xMuN4RMJvzJhu0zi3grjkY675RPFfkMUjpYqSaQZfs=,tag:rZKjqzBK9CqFGak3nRjorg==,type:str]
+    #ENC[AES256_GCM,data:rbXwjUcUOOHcfDBgBwX1csfhen4BDV0BdkxuCRnsB7s+,iv:z/hEtwegiOOgAZ3JEPR0Wig3P9MjcRnc9IpJ1m4P/M8=,tag:hTPCBO1wHSkpdLZQ9vI0LA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:KXRQymFte7+E016ItUcD,iv:5eaAjD4CV5vxBx+Sb3BSmM3dGAucQeiQcyPzkauWPRs=,tag:TQIKKxJF60cY4rlFNuACOw==,type:str]
+    #ENC[AES256_GCM,data:HE2Vs1nbOaoEu8jrzMx8PEIyuei2ItnsGZdM7gwcTaGnljy8kmzACgpP4KxtC5Z+zKRnnQwcGoDgCf5be0nAKkYuZmvV+FVpc3TtwbEyJk4=,iv:e4hZ+XI0cE/NBfsL/W3lFyo9fVDEkBpusB8hUNj2JoI=,tag:Kj8QXhn6+UimGg3oBPSP/A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:E8GwXv/XNhDS//MqiJ38,iv:fgcBEmG7V/WHVdH0zp7SXa63PIkMWh7DEhfPsC/wC/c=,tag:pBegX1/lFlkyHWXO7/GUQw==,type:str]
+    #ENC[AES256_GCM,data:qCxs6tip1NqxLWvSJ4BfeajYHAI2l8in0xBQmq24GIkw69krff0VsXcAf/SlR7aKuqukaNJsUZLm6Lf8JnzY4HJGoWtvY0FGAJkPJcCbpRco82FVZ0cB,iv:A9fjxKe7gWZw+pnC4oWYV47IQ2uuUKNKQmvxhF4sags=,tag:TBA/R5rFIwY1nyn4rnyVrA==,type:comment]
+    #ENC[AES256_GCM,data:TDTBGzHh5Xm4FErbdVQak7FdX33RFAecsYBpf8zSx+3S3xX8NrgNqwXjTQRLHNA0SCxmjBBsCd9F0NV2WJxvyVuQ9Ax3fWtmSR46DeiIhggJbtNy20GSgMAbPx7l33V6HOzW4+t8HzTnGmawy++olTbANo/ZbfzZRppfkg==,iv:CKOMiJwy4pBDjYzqRfVAVf2FtR2O1NScIl88DCqpirU=,tag:WlGVVtavNlZiNWw3K6tWWw==,type:comment]
+    #ENC[AES256_GCM,data:1thmZCnvmialOPixrLoQNwq7yhls8v1nsHARMA0TILf4+pMzAKPYC95v0jNaRPqRE7i4VMi3j0SrzqAmBeimS1LHEOxv6gq4zJRVcjFkFFM=,iv:+KHfaBD9vbpb510AGkKncihXEVWL2Tmi0HcnF5xpMaU=,tag:hyaT68++Avldz4GXEry3lw==,type:comment]
+    #ENC[AES256_GCM,data:0AYDbBiY2I8q2pxMN3RJqlvjI9Nw7Loc89xIFpFtlRrLxA++6iWw+otPFF/GVv4XwwqhVBkR,iv:I4EfFryp7QfrY8brMjTCo2VFzAN+7ySvww4AQ7QnYL8=,tag:oKQMLONTQRdyIdviPilhLQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:huyApBSZaTYInsJ+,iv:DBwXwyg+QTJu+3oLsPsYVFFBWBjx9jhVhBlRcTyVkYs=,tag:PO3UV3PgJ7p8Qb8SFRM62Q==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ONQCveyIY5sg84mAjDZwFyg=,iv:LB1MC2xTjBH6F4jZiNhuNQzCncaLkSb6R3KGaeNXLKI=,tag:T5KujUJQ1MaIqTP577LhZA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:HKJckaX8jHvazrDD0AZalD5KBtSC4GSJoTKiplbxeQg=,iv:eejvzprfv++4FFdF98fcP/t99O2cH+5QistYWwKtlMc=,tag:VQE/CB1SqpR7rJEGuWlAlw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CNDsUXCdKHOKn5PxkwHWxp6if6NdZFA3UKzfqZhIIQqGsbo/yUZXGg==,iv:4ARdGNoX+tM2dL0t45aUcd6iXBTgzrWSmL1OdQfmZoY=,tag:dMDyiI8Bo2CA/V00U3jcbQ==,type:str]
+    #ENC[AES256_GCM,data:EJLikbyDKKqG7dsrjC/yx0LHE/bPCHgxZTg/PzZgZfldErEggNA9vyGMTiR1WHLKOcP9AAZ23Rr9JJMHiaPcEA==,iv:rIAhozcXVG05EvaA1mkauMsFjKtxigQSeTr5doLoks4=,tag:zk00k0CVlytgA/Cn2XsgcQ==,type:comment]
+    #ENC[AES256_GCM,data:mloeG/pQKfJsteBFupMRYS46ypB5unuTEKrbybAMptyDVSnA5oXR8dCcEKizmQxw8c8XAQEtgIo=,iv:tA+xVXaex07GN8r0/B+xCiRjIPSK//HFMfLjuXbemCg=,tag:8jV9/y3Z6nA6c9oT2WSQQg==,type:comment]
+    #ENC[AES256_GCM,data:XYFhl27C98EYEKKyKNZ9SltsjgcSIb38Tw==,iv:s+4RCHSJ7gdZLh+aKfZ1CICojtWqyDsldwB2Lv/qrio=,tag:oDlMC9VH1hrc3faJPUaQ0g==,type:comment]
+    #ENC[AES256_GCM,data:WZrPeg8s/x8HbjrIS8SpMg/qoYrHNJ94uvdZbuMCPM+gFEf/L96KDq+rxYjNEMy7Oma4yzByTDRr6AYt4M+R4CsCFZBhVAQLxMQV6YQ=,iv:X+H4DjOYWq3LVgyy320XLEhVK7NfqtgbPBjKfad7t0M=,tag:0q571p18diJFZr2UQnyGPg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:OQto6jvcGBTDEfaypTAnasb96iOieienzYSdfNVaT9rPt2oa3cHRWp3q+9Pyyp7B,iv:bBzp4A1ulyHgHOv5+Z5BIZ7LKyPJxN2H4s6juSiVmjM=,tag:bbHpzZuj8/yFuuwrh+VbzA==,type:str]
+    #ENC[AES256_GCM,data:9LDy9RwLfuP38/HGc/92XrRs8f+NmPy/dWTB1n8uog8wN0hdEwX3SRF8nhl5qOssvPwI839m9bkYoirwxHfKGBocu3i499U=,iv:JB1MDyskLP44ZKY/qBXlgoEgQL88n8Vhc9+8dKq5K7I=,tag:YPBb8wFiPNLYuzJME5nmag==,type:comment]
+    #ENC[AES256_GCM,data:+QpillbG/7vvKn9/khJFuBx49UDBU8ttUXmpP1EIxwR2XfmFzEBi2hGU+asutQAWnQ262w1I,iv:EWLSKsWygJ1zvu3Kn3l02I/7FxqLayUeQ8nctAZocZI=,tag:QX8szxx53WZCc/h+JziBQA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:gGmvcRbxJg==,iv:p4Ra8FuHTbGEqMiWF+FnRbGK0BQwi/4P3KhbiN0ew9g=,tag:eOdk/k/wo3vlkGG96wZYMg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:HbVKNZETHZ/Xk1QAmqJkybPWhD4=,iv:C+qancS+YWBElRQovpwqcG4215rlBQkS5Q3aj+WbUgw=,tag:UUYUN926xFGGUrjXMXSMvQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:mRleFiPeLLrm1ss=,iv:qqWfTZwgAMj035d+/3SsOBDb1HgzFFOSfWZzj7tlupo=,tag:C18PiFLBwK0mlmKW7NVC5w==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:qLF6TAuB9sCToqmeqRYv,iv:f/g7KHvsVfV+VjnSKL7KC/bLSN13Au3Sdw+sGlOcJ6I=,tag:iBzfXJSxyUsqV01iUanDwg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:IknbiLZLxiqJAiC/AorD4rBSmLVulRIgeA==,iv:xr6+qE14mCycCwK0923NN0Xnh8u82SQVQG+sOrD9dj8=,tag:ToHJksz92d3AKQ6fragORQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:sTbybylmfX0Kwb2hMZlc9c0RmS7CSsMl,iv:mDAoj+hWuZFDzV4BYumot5PxOlYrR2S52+of8gqo8Nk=,tag:QwTwypIUZhPwO5f1jVlzfw==,type:str]
+    #ENC[AES256_GCM,data:f+hXB+aAICQ7Ru5pBaI=,iv:zxBxuP89tmSQr0JLG7BcOjv71zLPLXWwkC+EUfhuTF0=,tag:6X4hX6azj+bLoR6cO0q4TA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:t5gAuJgU0Nmh1X5rug==,iv:G2nL35NMme/rs1XEw9P6sYtK9DvndsKsfC8fLKCv+hI=,tag:AOnlGLpUpfhSa5RuPq+OLg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:HDvf+/MYeD0ZfTl8pA==,iv:wG3/6lnj6aEL79h5VHQNcLpHwv5Ad4gfUquidsDGEic=,tag:tx/JDvAHIhos3LrjXcw4hQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:FMjDjA==,iv:HxLx5CPt8nFZO0WkAU2gbo+UloPwrQAOLrAW5PcvhDM=,tag:EPM1/CBAUN/UPclAow+k1w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -55,14 +55,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPVU9VMXdHeFVXS3NKSk11
-            UW5qbkdod3V0ZkcrZk1DcFBzaERVazNKSEI4ClhNN3FFWmhwRU5pNFIrdElPa0pW
-            UHJKRGhKd1psbmp5T2IrSGt6aDhrdVUKLS0tIC8wVnhnc0lUOWx1bm4yRDRLeGo4
-            RncvTFp0bmd3VmhYODdmVU0wcnIxdkEKegN6k4HT2wFitb6ZvuNVeLoyRgeff/El
-            VtQ7iCLIeXIOPbUZHE8VXhh3SPhw1lrBhbI/NxvMdHyPfrOb0knUlA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHeGZnSW51VUJDenV1K3Ro
+            NlAwTVlZeVZnTXVBVGd6Z2hYZGZDVEVtSncwCkNMU3d6bkRncXNVQXpNRG0wemF1
+            aG5kTDZsdG0ycVMyVDhzUXFoT0hZNkkKLS0tIGVuMFpwSEtDWjFjZDBJRjR3MHBF
+            SkVGLzVqb1RTblcrQStuZE9pTWlxUUkKmMcw8eWMnqs9P7vezzOoP/3QDvl9FP7b
+            dK8VB3Qvl5mLkxSwNWm/I8ILEvMF6OMZ/KaiDHor4zKExK7F6S+ROg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-08T23:08:36Z"
-    mac: ENC[AES256_GCM,data:0HmfB6h6ZgTwJmJA5qoDIWgQ3bV/e7H7+Q7gx3UAeEGyzEpyo1sB5ZG+QhOB7ayYwnSUlSQwC3CKTekADaaiuVl+feV6cAH8OraSU2e8EISnBLpNC6IhujxGdBSTL8brOjUjvQvHWWHWKXj7QUUJyCyWTVtGjotqVvlveF2TK3w=,iv:GYFcPACUOz3zeVQxDFSnfPcDUrnDvPI3IunbaqHg3SE=,tag:kEAR2VL3uiUbcYxBa8d30w==,type:str]
+    lastmodified: "2025-01-09T01:15:35Z"
+    mac: ENC[AES256_GCM,data:QpdWhYDy2HGa78ExHNpWz5EjdNCIaMh5mJeMiZvTpA6QDNIv7El9lIMdmar44Q/7CiNmRPk8d+BfKrZFGPA09YOXuoOADBRvEWcvf7zzCP2yYyxkP1xDADUZRHn36KDj23I8zN4cgFQhjOTtmb3ZkhU0MwbTND1AnjjHlEnUiRk=,iv:MSteibBn1QtQUz4SRNaP99kkn8sgRTer//se8ivmmVg=,tag:ANe6tZSrt0qNvJ1+JCZ54A==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
